--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
       </div>
 
       <div class="slide">
-        <img src="#" alt="Image 4">
+        <img src="4didi.jpg" alt="Image 4">
         <p>#</p>
       </div>
 
       <div class="slide">
-        <img src="#" alt="Image 5">
+        <img src=5вшвш.jpg" alt="Image 5">
         <p>#</p>
       </div>
 
