--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="slide">
-        <img src=5вшвш.jpg" alt="Image 5">
+        <img src="5sdbsd.jpg" alt="Image 5">
       </div>
 
       <div class="slide">
