--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
 
       <div class="slide">
-        <img src="#" alt="Image 6">
+        <img src="вщ6.jpg" alt="Image 6">
       </div>
 
       <div class="slide">
